translate to greek

--- a/ecom/apps/core/templates/about.html
+++ b/ecom/apps/core/templates/about.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}About | {% endblock title %}
+{% block title %}Πληροφορίες | {% endblock title %}
 
 {% block content %}
-    <h1 class="title">About</h1>
+    <h1 class="title">Πληροφορίες</h1>
 
-    <p>This is the information page</p>
+    <p>Πληροφορίες</p>
 {% endblock %}
