--- a/ecom/apps/core/templates/contact.html
+++ b/ecom/apps/core/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
-{% block title %}Contact | {% endblock title %}
+{% block title %}Επικοινωνία | {% endblock title %}
 
 {% block content %}
-    <h1 class="title">Contact</h1>
+    <h1 class="title">Επικοινωνία</h1>
 {% endblock %}
